2007-12-30  Øyvind Kolås  <pippin@gimp.org>

	* app/core/Makefile.am: added GEGL_CFLAGS.
	* app/core/gimpdrawable-invert.c: added an alternate GEGL code path
	that can be enabled by uncommenting ENABLE_GEGL in the file.

2007-12-30  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/gimpmodule.c
	* plug-ins/pygimp/pygimp-pdb.c
	* plug-ins/pygimp/pygimp-colors.c
	* plug-ins/pygimp/pygimpcolor-api.h
	* plug-ins/pygimp/pygimpcolor.h: Move pygimp_rgb_from_pyobject into
	the gimpcolor module, and make it handle translation of sequences
	into colors too. Make the GimpParam translation code use it.

	* plug-ins/pygimp/gimpcolormodule.c: Initial wrapping of
	gimp_bilinear color functions.

	* plug-ins/pygimp/gimpenumsmodule.c
	* plug-ins/pygimp/gimpmodule.c
	* plug-ins/pygimp/pygimp.h
	* plug-ins/pygimp/pygimp-tile.c: Basic wrapping of GimpPixelFetcher.

2007-12-30  Øyvind Kolås  <pippin@gimp.org>

	reviewed by: <delete if not using a buddy>

	* app/core/Makefile.am:
	* app/core/gimpdrawable-invert.c: (idle_fun),
	(gimp_drawable_invert):

2007-12-30  Øyvind Kolås  <pippin@gimp.org>

	* app/gegl/gimpoperationtilesink.c: specify that this operation does
	not need the full buffer available before "flushing" the sink.

	* app/gegl/gegl/gegl-operation-sink.h:
	* app/gegl/gegl/gegl-operation.h: updated copy of headers.

2007-12-30  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpegqual.c (quant_info): added entry for Canon
	Digital Ixus v2 and removed duplicate entry.

2007-12-30  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpegqual.c: use G_OPTION_REMAINING to access the
	filenames passed as command-line arguments.

2007-12-30  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/chip-away.scm: applied another patch
	from Ulf-D. Ehlert for the parameter range (bug #506110).

2007-12-29  Øyvind Kolås  <pippin@gimp.org>

	* app/gegl/gimpoperationtilesource.c: override the default behaviour
	of GeglOperationSource to expand the result rect to the full have